[package]
name = "cbs-protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cbs_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features=["init-if-needed"] }
anchor-spl = {version = "0.22.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2"
nom = "7"
solana-program = "1.6.6"
pyth-client = "0.2.2"
lpfinance-accounts = { path = "../../../lpfinance-accounts/programs/lpfinance-accounts", features=["cpi"]}
lpfinance-tokens = { path = "../../../lpfinance-tokens/programs/lpfinance-tokens", features=["cpi"]}
solend = { path = "../../../solend/programs/solend", features=["cpi"]}
apricot = { path = "../../../apricot/programs/apricot", features=["cpi"]}