[package]
name = "lpusd-auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "lpusd_auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = {version = "0.22.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2"
nom = "7"
solana-program = "1.6.6"
pyth-client = "0.2.2"
cbs-protocol = { path = "../../../cbs-protocol/programs/cbs-protocol", features=["cpi"]}
lpfinance-swap = { path = "../../../lpfinance-swap/programs/lpfinance-swap", features=["cpi"]}
