[package]
name = "solend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features=["init-if-needed"] }
anchor-spl = {version = "0.22.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.6.6"
lending-tokens = { path = "../../../lending-tokens/programs/lending-tokens", features=["cpi"] }
